updated for github pages

--- a/css/amning2.css
+++ b/css/amning2.css
@@ -1,84 +1,109 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 @font-face {
-    font-family: 'bebas neue';
-    src: url('/fonts/BebasNeue-Regular.ttf') format('woff');
+  font-family: "bebas neue";
+  src: url("./fonts/BebasNeue-Regular.ttf") format("woff");
 }
 
 body {
-    background-image: url('/img/baggrund-medstreger.webp');
+  background-image: url("./img/baggrund-medstreger.webp");
 }
 
 section {
-    position: relative; 
-    height: 1024px;
-    width: 1366px;
+  position: relative;
+  height: 1024px;
+  width: 1366px;
 }
 
 h1 {
-    font-family: 'bebas neue';
-    color: #c2241d;
-    font-size: 5rem;
-    text-align: center;
-    padding-top: 414px;
-    padding-left: 30px;
-    padding-right: 30px;
+  font-family: "bebas neue";
+  color: #c2241d;
+  font-size: 5rem;
+  text-align: center;
+  padding-top: 414px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 h3 {
-    font-family: 'bebas neue';
-    color: #c2241d;
-    font-size: 3rem;
-    text-align: center;
+  font-family: "bebas neue";
+  color: #c2241d;
+  font-size: 3rem;
+  text-align: center;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 section {
-    position: relative; 
-    height: 1024px;
-    width: 1366px;
+  position: relative;
+  height: 1024px;
+  width: 1366px;
 }
 
 p {
-    font-family: inherit; 
-    color: inherit; 
-    font-size: 1.5rem; 
-    text-align: center;
-    margin: 0; 
-    position: absolute; 
+  font-family: inherit;
+  color: inherit;
+  font-size: 1.5rem;
+  text-align: center;
+  margin: 0;
+  position: absolute;
 }
 
 label {
-    display: block;
-    font-size: 1.6rem;
-    font-family: inherit;
-    position: absolute;
-    text-align: center;
-    width: 400px;
-    color: #ffffff;
+  display: block;
+  font-size: 1.6rem;
+  font-family: inherit;
+  position: absolute;
+  text-align: center;
+  width: 400px;
+  color: #ffffff;
 }
 
 /* Behold dine positionsklasser */
-.check1 { top: 50px; left: 50px; }
-.check2 { top: 150px; left: 500px; }
-.check3 { top: 250px; left: 100px; }
-.check4 { top: 350px; left: 325px; width: 900px; }
-.check5 { top: 625px; left: 400px; }
-.check6 { top: 725px; left: 85px; }
-.check7 { top: 825px; left: 710px; }
-.check8 { top: 925px; left: 170px; }
+.check1 {
+  top: 50px;
+  left: 50px;
+}
+.check2 {
+  top: 150px;
+  left: 500px;
+}
+.check3 {
+  top: 250px;
+  left: 100px;
+}
+.check4 {
+  top: 350px;
+  left: 325px;
+  width: 900px;
+}
+.check5 {
+  top: 625px;
+  left: 400px;
+}
+.check6 {
+  top: 725px;
+  left: 85px;
+}
+.check7 {
+  top: 825px;
+  left: 710px;
+}
+.check8 {
+  top: 925px;
+  left: 170px;
+}
 
 .afslutknap {
-    position: absolute;
-    width: 142px;
-    height: 135px;
-    bottom: 0;
-    right: 0;
+  position: absolute;
+  width: 142px;
+  height: 135px;
+  bottom: 0;
+  right: 0;
 }
