--- a/css/pubertet.css
+++ b/css/pubertet.css
@@ -1,97 +1,95 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 @font-face {
-    font-family: 'bebas neue';
-    src: url('/fonts/BebasNeue-Regular.ttf') format('woff');
+  font-family: "bebas neue";
+  src: url("./fonts/BebasNeue-Regular.ttf") format("woff");
 }
 
-body{
-    background-image: url('/img/baggrund-medstreger.webp');
+body {
+  background-image: url("./img/baggrund-medstreger.webp");
 }
 
-h2{
-    font-family: 'bebas neue';
-    color: #C62D26;
-    font-size: 8rem;
-    padding-bottom: 2rem;
-    text-align: center;
-    padding-top: 6rem;
+h2 {
+  font-family: "bebas neue";
+  color: #c62d26;
+  font-size: 8rem;
+  padding-bottom: 2rem;
+  text-align: center;
+  padding-top: 6rem;
 }
 
-.quiz-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 4rem 2rem;
-    text-align: center;
+.quiz-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 4rem 2rem;
+  text-align: center;
 }
 
-.svarmuligheder{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2rem;
-    max-width: 800px;
-    width: 100%;
+.svarmuligheder {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+  max-width: 800px;
+  width: 100%;
 }
 
-.svarmulighed{
-    padding: 2rem;
-    color: white;
-    font-size: 1.2rem;
-    border: none;
-    cursor: pointer;
-    transition: transform 0.2s ease;
-    border-radius: 4px;
-    font-family: 'bebas neue';
-    
+.svarmulighed {
+  padding: 2rem;
+  color: white;
+  font-size: 1.2rem;
+  border: none;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+  border-radius: 4px;
+  font-family: "bebas neue";
 }
 
-.svarmulighed:hover{
-    transform: scale(1.05);
+.svarmulighed:hover {
+  transform: scale(1.05);
 }
 
-.knappe-a{
-    background-color: #DA5552;
-    
+.knappe-a {
+  background-color: #da5552;
 }
 
-.knappe-b{
-    background-color: #DE85A3;
+.knappe-b {
+  background-color: #de85a3;
 }
 
-.knappe-c{
-    background-color: #E46087;
+.knappe-c {
+  background-color: #e46087;
 }
 
-.knappe-d{
-    background-color: #DF7373;
+.knappe-d {
+  background-color: #df7373;
 }
-  
+
 .svar {
-    display: flex;
-    width: 500px;
-    height: 500px;
-    border-radius: 50%;
-    background-color: #f4b18c;
-    color: white;
-    font-family: 'bebas neue', sans-serif;
-    font-size: 1.4rem;
-    text-align: center;
-    padding: 2rem;
-    border: none;
-    line-height: 1.4;
-    flex-direction: column;
-    justify-content: center;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-    z-index: 5;
-  }
+  display: flex;
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  background-color: #f4b18c;
+  color: white;
+  font-family: "bebas neue", sans-serif;
+  font-size: 1.4rem;
+  text-align: center;
+  padding: 2rem;
+  border: none;
+  line-height: 1.4;
+  flex-direction: column;
+  justify-content: center;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  z-index: 5;
+}
 
-.svar-tekst{
-  font-family: 'bebas neue', sans-serif;
+.svar-tekst {
+  font-family: "bebas neue", sans-serif;
   font-size: 2rem;
   color: white;
   text-align: center;
@@ -126,48 +124,48 @@ h2{
 }
 
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.4); /* fade baggrund */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.5s ease;
-    z-index: 100;
-  }
-  
-.overlay.show {
-    opacity: 1;
-    pointer-events: auto;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.4); /* fade baggrund */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.5s ease;
+  z-index: 100;
+}
 
-a{
-    color: white;
-    text-decoration: none;
+.overlay.show {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+a {
+  color: white;
+  text-decoration: none;
 }
 
 .afslutknap {
-    position: absolute;
-    width: 142px;
-    height: 135px;
-    bottom: 0;
-    right: 0;
+  position: absolute;
+  width: 142px;
+  height: 135px;
+  bottom: 0;
+  right: 0;
 }
 
 #resultat-overlay {
-    display: flex !important;
-    justify-content: center !important;
-    align-items: center !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
 }
 
 #resultat {
-    margin: 0 !important;
-    position: relative !important;
-    left: 0 !important;
-    top: 0 !important;
+  margin: 0 !important;
+  position: relative !important;
+  left: 0 !important;
+  top: 0 !important;
 }
