--- a/css/amning3.css
+++ b/css/amning3.css
@@ -1,108 +1,108 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 @font-face {
-    font-family: 'bebas neue';
-    src: url('/fonts/BebasNeue-Regular.ttf') format('woff');
+  font-family: "bebas neue";
+  src: url("./fonts/BebasNeue-Regular.ttf") format("woff");
 }
 
 body {
-    background-image: url('/img/baggrund-medstreger.webp');
+  background-image: url("./img/baggrund-medstreger.webp");
 }
 
 h1 {
-    font-family: 'bebas neue', sans-serif;
-    font-size: 4rem;
-    color: #c2241d;
-    text-align: center;
-    margin-top: 50px; 
+  font-family: "bebas neue", sans-serif;
+  font-size: 4rem;
+  color: #c2241d;
+  text-align: center;
+  margin-top: 50px;
 }
 
 p {
-    font-size: 25px;
-    text-align: center;
-    margin: 20px auto;
-    max-width: 800px;
-    line-height: 10;
-    font-family: 'bebas neue', sans-serif;
-    color: #ffffff;
+  font-size: 25px;
+  text-align: center;
+  margin: 20px auto;
+  max-width: 800px;
+  line-height: 10;
+  font-family: "bebas neue", sans-serif;
+  color: #ffffff;
 }
 
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.4);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.5s ease;
-    z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.5s ease;
+  z-index: 100;
 }
 
 .overlay.show {
-    opacity: 1;
-    pointer-events: auto;
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .svar {
-    width: 500px;
-    height: 500px;
-    border-radius: 50%;
-    background-color: #f4b18c;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    font-size: 1.5rem;
-    text-align: center;
-    padding: 2rem;
-    color: white;
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  background-color: #f4b18c;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  font-size: 1.5rem;
+  text-align: center;
+  padding: 2rem;
+  color: white;
 }
 
 .svar::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 150px;
-    height: 150px;
-    background-color: #de8e86;
-    border-radius: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 150px;
+  height: 150px;
+  background-color: #de8e86;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
 }
 
 .svar::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 90px;
-    height: 90px;
-    background-color: #c86c6c;
-    border-radius: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 90px;
+  height: 90px;
+  background-color: #c86c6c;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
 }
 
 .svar-tekst {
-    z-index: 2;
-    position: relative;
-    font-family: 'bebas neue';
+  z-index: 2;
+  position: relative;
+  font-family: "bebas neue";
 }
 
 .afslutknap {
-    position: absolute;
-    width: 142px;
-    height: 135px;
-    bottom: 0;
-    right: 0;
+  position: absolute;
+  width: 142px;
+  height: 135px;
+  bottom: 0;
+  right: 0;
 }
