--- a/css/amning2.css
+++ b/css/amning2.css
@@ -6,11 +6,11 @@
 
 @font-face {
   font-family: "bebas neue";
-  src: url("./fonts/BebasNeue-Regular.ttf") format("woff");
+  src: url("/eksamen2025/fonts/BebasNeue-Regular.ttf") format("woff");
 }
 
 body {
-  background-image: url("./img/baggrund-medstreger.webp");
+  background-image: url("/eksamen2025/img/baggrund-medstreger.webp");
 }
 
 section {
