--- a/css/menu.css
+++ b/css/menu.css
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: "bebas neue";
-  src: url("./fonts/BebasNeue-Regular.ttf") format("woff");
+  src: url("/eksamen2025/fonts/BebasNeue-Regular.ttf") format("woff");
 }
 
 body {
