--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: "bebas neue";
-  src: url("./fonts/BebasNeue-Regular.ttf") format("woff");
+  src: url("/eksamen2025/fonts/BebasNeue-Regular.ttf") format("woff");
 }
 
 h1 {
@@ -38,7 +38,7 @@ article {
 }
 
 .background {
-  background-image: url("./img/sloerret-baggrund.webp");
+  background-image: url("/eksamen2025/img/sloerret-baggrund.webp");
   background-size: cover;
   background-position: center;
   height: 100vh;
